--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-.idea
+# Default ignored files
+.idea/workspace.xml
+.idea/vcs.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/uiDesigner.xml
+
+/out/
+*.iml
